fix overflow

--- a/web/src/styles/_layout.scss
+++ b/web/src/styles/_layout.scss
@@ -345,6 +345,7 @@ $BREAKPOINT-LG: 125em;
 
 		width: 100%;
 		//max-width: 125rem;
+		overflow-x: clip;
 
 		margin: 0;
 		padding: 0;
